# gmail_outlook

./: .env  .gitignore  GITHUB_PAGES_DEPLOY.md  README.md  app.js  config.example.js  index.html  package-lock.json  package.json  plan.md  pyproject.toml  raport.tex  requirements.txt  styles.css  test-supabase-connection.mjs
.github/workflows/: deploy-pages.yml
badane_elementy/: README.md
charts/: generate.py
notebooks/: analysis.ipynb
scripts/: build.mjs  generate-config.mjs
sql/: migration_add_age.sql  migration_per_question_columns.sql  seed_test_data.sql  supabase_schema.sql
src/: analiza.html  analysis.js  ankieta.html  app.js  config.js  index.html  styles.css
